cicd/TDP207/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdp-backend-service
  namespace: tdp207
spec:
  type: ClusterIP
  selector:
    app: tdp-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
