cicd/TDP207/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdp-frontend-service
  namespace: tdp207
spec:
  type: ClusterIP
  selector:
    app: tdp-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
